--- a/src/components/Card1/index.css
+++ b/src/components/Card1/index.css
@@ -3,10 +3,6 @@
   padding-right: 0px;
 }
 
-#main-article-photo {
-  height: 600px;
-}
-
 .bd-placeholder-img {
   height: 380px;
   width: 100%;
@@ -24,4 +20,22 @@
 .card:hover {
   box-shadow: 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14),
     0 1px 8px 0 rgba(0, 0, 0, 0.12);
+}
+
+@media (max-width: 1024px) {
+  #main-article-photo {
+    height: 150px;
+  }
+}
+
+@media (min-width: 1024px) {
+  #main-article-photo {
+    height: 300px;
+  }
+}
+
+@media (min-width: 1440px) {
+  #main-article-photo {
+    height: 600px;
+  }
 }
