--- a/src/components/Card3/index.css
+++ b/src/components/Card3/index.css
@@ -64,3 +64,15 @@
 .line-password {
   background: rgb(166, 35, 31);
 }
+
+.line-password2 {
+  background: rgb(117, 0, 247);
+}
+
+.line-portfolio2 {
+  background: rgb(209, 226, 241);
+}
+
+.line-politiCandid {
+  background: rgb(255, 0, 0);
+}
